updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a failed Architect looking to pursue a life-long dream of working in the tech industry. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am born and raised in Perth, Western Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy hanging out with my wife and our cat, and also playing soccer. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Having my own tech company would be nice, but I would settle for working at Tesla, Apple or Google. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>West Perth</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always had a love for technology and the internet. Until recently though I had not considered makinh a career out of it. I feel silly for waiting until now to get started, but I feel like my motivation now is stronger than ever. I would like to make positive changes to the way we interact with the internet for the future.  </p>
     </section>
 
     <footer id="footer">
