--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>West Perth</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I have always had a love for technology and the internet. Until recently though I had not considered makinh a career out of it. I feel silly for waiting until now to get started, but I feel like my motivation now is stronger than ever. I would like to make positive changes to the way we interact with the internet for the future.  </p>
+      <p>I have always had a love for technology and the internet. Until recently though I had not considered making a career out of it. I feel silly for waiting until now to get started, but I feel like my motivation now is stronger than ever. I would like to make positive changes to the way we interact with the internet for the future.  </p>
     </section>
 
     <footer id="footer">
